objects/AW_Expense__c.object
<CustomObject>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to the expense</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Amount__c</fullName>
        <description>This field represents the amount spent in the expense</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Description__c</fullName>
        <description>This indicates the short description of the expense</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Frequency__c</fullName>
        <description>This field represents the Frequency in which the expense occurs</description>
        <label>Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Last_Updated_Date_from_Source__c</fullName>
        <description>This field used to store the date of last update from source system</description>
        <label>Source Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>UACFID of Owner</description>
        <formula>Owner:User.AW_UACFID__c</formula>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Primary_Owner__c</fullName>
        <description>This field used to store the System ID of the Source System</description>
        <formula>AW_Account__r.FinServ__SourceSystemId__c</formula>
        <label>Primary Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <description>This field represents the Source System Name</description>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Source_System_Names</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_TF_Source_System_ID__c</fullName>
        <description>This field used to store the external Unique Source System ID</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_UpdatedByMulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to indicate whether it is updated by MuleSoft</description>
        <label>Updated by MuleSoft</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>